# MazariniBot

./: README.MD  TODO.txt  allCommands.py  check_for_birthday.py  main.py  meme_commands.py  on_message.py  pyproject.toml  react_to_author.py  react_to_reactions.py  shutterstock_commands.py  spin_command.py  textVars.py  warzone_commands.py
