[tool.poetry]
name = "mazarinibot"
version = "0.1.3"
description = "A helper for the Mazarini Discord."
authors = ["Arne Kvaleberg, Eivind Dagsland Halderaker"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
replit = "^2.0.0"
schedule = "^1.0.0"
yfinance = "^0.1.55"
requests-html = "^0.10.0"
youtube-dl = "^2021.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
